feat: coin list api
info and list

delete favorite
